--- a/vignettes/Probit.html
+++ b/vignettes/Probit.html
@@ -77,8 +77,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="contents" class="section level2">
 <h2>Contents</h2>
 <ul>
-<li><a href="#probit-model">Probit Model</a></li>
-<li><a href="#robit-model">Robit Model</a></li>
+<li><a href="#probit">Probit</a></li>
+<li><a href="#robit">Robit</a></li>
 </ul>
 </div>
 <div id="probit" class="section level1">
