--- a/README.html
+++ b/README.html
@@ -131,8 +131,8 @@ $(document).ready(function () {
 <div id="contents" class="section level2">
 <h2>Contents</h2>
 <ul>
-<li><a href="#probit-model">Probit Model</a></li>
-<li><a href="#robit-model">Robit Model</a></li>
+<li><a href="#probit">Probit</a></li>
+<li><a href="#robit">Robit</a></li>
 </ul>
 </div>
 </div>
