Added score test

--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Zachary McCaw" />
 
-<meta name="date" content="2018-09-14" />
+<meta name="date" content="2018-09-16" />
 
 <title>README</title>
 
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">README</h1>
 <h4 class="author"><em>Zachary McCaw</em></h4>
-<h4 class="date"><em>2018-09-14</em></h4>
+<h4 class="date"><em>2018-09-16</em></h4>
 
 </div>
 
@@ -152,36 +152,70 @@ z_{i}|x_{i} \sim \text{Logistic}\big(\eta_{i},1) \\
 y_{i} = I[z_{i}&gt;0]
 \]</span></p>
 </div>
-<div id="implementation" class="section level2">
-<h2>Implementation</h2>
-<p>Below, data are simulated for <span class="math inline">\(n=10^{3}\)</span> subjects. The linear predictor depends on four independent, standard normal covariates. The function <code>rBinReg</code> is provided for simulating from binary regression models. The function <code>fit.BinReg</code> with <code>model=&quot;logistic&quot;</code> specifies a logistic model.</p>
-<pre class="r"><code>set.seed(100);
+<div id="estimation" class="section level2">
+<h2>Estimation</h2>
+<p>Below, data are simulated for <span class="math inline">\(n=10^{3}\)</span> subjects. The model matrix <code>X</code> includes an intercept and four standard normal covariates. The function <code>rBinReg</code> is provided for simulating from binary regression models. The function <code>Fit.BinReg</code> with <code>model=&quot;logistic&quot;</code> specifies a logistic model.</p>
+<pre class="r"><code>set.seed(101);
 library(BinReg);
 # Subjects
 n = 1e3;
 # Design matrix
-X = matrix(rnorm(n=4*n),nrow=n);
+X = cbind(1,matrix(rnorm(n=4*n),nrow=n));
 # Regression coefficient
-b = c(1,-0.5,-0.5,0);
+b = c(1,-1,2,-1,0);
 # Logistic outcome
 y = rBinReg(X,b,model=&quot;logistic&quot;);
 # Estimate regression parameters
-M = fit.BinReg(y=y,X=X,model=&quot;logistic&quot;);
+M = Fit.BinReg(y=y,X=X,model=&quot;logistic&quot;);
 show(M);</code></pre>
-<pre><code>## Objective increment:  75.1 
-## Objective increment:  4.5 
-## Objective increment:  0.0513 
-## Objective increment:  8.84e-06 
-## Objective increment:  2.27e-13 
-## 4 update(s) performed before tolerance limit.
+<pre><code>## Objective increment:  163 
+## Objective increment:  28.3 
+## Objective increment:  3.23 
+## Objective increment:  0.0653 
+## Objective increment:  3.39e-05 
+## Objective increment:  9.55e-12 
+## 5 update(s) performed before tolerance limit.
 ## 
-## Fitted Logistic Model
+## Fitted logistic Model
 ## Estimated Coefficients:
-##   Coeff   Point     SE       L      U        p
-## 1    x1  1.0000 0.0849  0.8370  1.170 3.12e-32
-## 2    x2 -0.5480 0.0794 -0.7030 -0.392 5.32e-12
-## 3    x3 -0.4870 0.0728 -0.6300 -0.344 2.31e-11
-## 4    x4  0.0998 0.0757 -0.0487  0.248 1.88e-01</code></pre>
+##   Coeff   Point     SE      L      U        p
+## 1    x1  1.0200 0.1020  0.825  1.220 7.65e-24
+## 2    x2 -1.0000 0.1060 -1.210 -0.794 3.28e-21
+## 3    x3  2.0400 0.1390  1.760  2.310 2.26e-48
+## 4    x4 -1.0800 0.1080 -1.300 -0.874 6.49e-24
+## 5    x5  0.0755 0.0931 -0.107  0.258 4.17e-01</code></pre>
+</div>
+<div id="inference" class="section level2">
+<h2>Inference</h2>
+<p>Wald tests for individual coefficients are stored in <code>M@Coefficients</code> and displayed using the <code>show</code> method. The function <code>Score.BinReg</code> performs score tests on subsets of the regression coefficients. The test is specified using a logical vector <code>L</code> with as many elements as columns in the model matrix <code>X</code>. An element of <code>L</code> is set to <code>TRUE</code> if the regression coefficient for that column of <code>X</code> is fixed under <span class="math inline">\(H_{0}\)</span>. An element of <code>L</code> is set to <code>FALSE</code> if the regression coefficient for that column requires estimation under <span class="math inline">\(H_{0}\)</span>. At least one element of <code>L</code> must be <code>TRUE</code> (i.e. a test must be specified) and at least on element of <code>L</code> must be <code>FALSE</code> (i.e. a null model must be estimable).</p>
+<p>Below, various hypothses are tested on the example data. The first is an overall test that the coefficients for all covariates, other than the intercept, are zero. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{1}=\beta_{2}=\beta_{3}=\beta_{4}=0\)</span>, which is false. The second is an individual test that the coefficient for the fourth covariate is zero. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{4}=0\)</span>, which is true. The third is a joint test that the coefficient for the second covariate is zero, and the coefficient for the fourth covariate is two. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{2}=0,\beta_{4}=2\)</span>, which if false. The fourth is a joint test that the coefficients for the first and third covariates are equal to negative one. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{1}=\beta_{3}=-1\)</span>, which is true. All models include an intercept <span class="math inline">\(\beta_{0}\)</span>, since in each case <code>L[1]=FALSE</code>.</p>
+<pre class="r"><code>cat(&quot;Test of b1=b2=b3=b4=0:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,T,T,T,T),model=&quot;logistic&quot;,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b4=0:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,F,F,F,T),model=&quot;logistic&quot;,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b2=0, b4=2:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,F,F,T,T),b10=c(0,2),model=&quot;logistic&quot;,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b1=b3=-1:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,T,F,T,F),b10=c(-1,-1),model=&quot;logistic&quot;,report=F);
+cat(&quot;\n&quot;);</code></pre>
+<pre><code>## Test of b1=b2=b3=b4=0:
+##        Score           df            p 
+## 4.271668e+02 4.000000e+00 3.745524e-91 
+## 
+## Test of b4=0:
+##     Score        df         p 
+## 0.6583181 1.0000000 0.4171544 
+## 
+## Test of b2=0, b4=2:
+##         Score            df             p 
+##  9.506807e+02  2.000000e+00 3.650072e-207 
+## 
+## Test of b1=b3=-1:
+##     Score        df         p 
+## 0.6456440 2.0000000 0.7241027</code></pre>
 </div>
 </div>
 <div id="probit" class="section level1">
@@ -194,29 +228,63 @@ z_{i}|x_{i} \sim N\big(\eta_{i},1) \\
 y_{i} = I[z_{i}&gt;0]
 \]</span></p>
 </div>
-<div id="implementation-1" class="section level2">
-<h2>Implementation</h2>
-<p>The function <code>fit.BinReg</code> with <code>model=&quot;probit&quot;</code> specifies a probit model.</p>
+<div id="estimation-1" class="section level2">
+<h2>Estimation</h2>
+<p>The function <code>Fit.BinReg</code> with <code>model=&quot;probit&quot;</code> specifies a probit model.</p>
 <pre class="r"><code># Probit outcome
 y = rBinReg(X,b,model=&quot;probit&quot;);
 # Estimate regression parameters
-M = fit.BinReg(y=y,X=X,model=&quot;probit&quot;);
+M = Fit.BinReg(y=y,X=X,model=&quot;probit&quot;);
 show(M);</code></pre>
-<pre><code>## Objective increment:  106 
-## Objective increment:  16.9 
-## Objective increment:  1.21 
-## Objective increment:  0.0102 
-## Objective increment:  2.75e-06 
-## Objective increment:  3.79e-10 
-## 5 update(s) performed before tolerance limit.
+<pre><code>## Objective increment:  196 
+## Objective increment:  50 
+## Objective increment:  17.5 
+## Objective increment:  3.38 
+## Objective increment:  0.185 
+## Objective increment:  0.00134 
+## Objective increment:  3.19e-06 
+## Objective increment:  8.95e-09 
+## 7 update(s) performed before tolerance limit.
 ## 
-## Fitted Logistic Model
+## Fitted probit Model
 ## Estimated Coefficients:
-##   Coeff   Point     SE       L      U        p
-## 1    x1  1.0600 0.0661  0.9310  1.190 5.73e-58
-## 2    x2 -0.4670 0.0544 -0.5730 -0.360 9.00e-18
-## 3    x3 -0.4770 0.0505 -0.5760 -0.378 3.65e-21
-## 4    x4  0.0698 0.0506 -0.0293  0.169 1.67e-01</code></pre>
+##   Coeff   Point     SE      L       U        p
+## 1    x1  1.1000 0.0888  0.929  1.2800 2.06e-35
+## 2    x2 -1.0800 0.0913 -1.250 -0.8960 5.16e-32
+## 3    x3  2.1800 0.1450  1.900  2.4700 1.58e-51
+## 4    x4 -1.0500 0.0892 -1.220 -0.8720 9.40e-32
+## 5    x5 -0.0456 0.0684 -0.180  0.0884 5.05e-01</code></pre>
+</div>
+<div id="inference-1" class="section level2">
+<h2>Inference</h2>
+<p>The same hypotheses considered previously are tested for the probit model.</p>
+<pre class="r"><code>cat(&quot;Test of b1=b2=b3=b4=0:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,T,T,T,T),model=&quot;probit&quot;,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b4=0:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,F,F,F,T),model=&quot;probit&quot;,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b2=0, b4=2:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,F,F,T,T),b10=c(0,2),model=&quot;probit&quot;,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b1=b3=-1:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,T,F,T,F),b10=c(-1,-1),model=&quot;probit&quot;,report=F);
+cat(&quot;\n&quot;);</code></pre>
+<pre><code>## Test of b1=b2=b3=b4=0:
+##         Score            df             p 
+##  5.399379e+02  4.000000e+00 1.537766e-115 
+## 
+## Test of b4=0:
+##     Score        df         p 
+## 0.4245797 1.0000000 0.5146607 
+## 
+## Test of b2=0, b4=2:
+##    Score       df        p 
+## 7333.243    2.000    0.000 
+## 
+## Test of b1=b3=-1:
+##     Score        df         p 
+## 0.6870218 2.0000000 0.7092758</code></pre>
 </div>
 </div>
 <div id="robit" class="section level1">
@@ -229,31 +297,64 @@ z_{i}|x_{i} \sim t_{\nu}(\eta_{i}) \\
 y_{i} = I[z_{i}&gt;0]
 \]</span></p>
 </div>
-<div id="implementation-2" class="section level2">
-<h2>Implementation</h2>
-<p>The function <code>fit.BinReg</code> with <code>model=&quot;robit&quot;</code> specifies a robit model.</p>
+<div id="estimation-2" class="section level2">
+<h2>Estimation</h2>
+<p>The function <code>Rit.BinReg</code> with <code>model=&quot;robit&quot;</code> specifies a robit model.</p>
 <pre class="r"><code># Degrees of freedom
 df = 7;
 # Robit outcome
 y = rBinReg(X,b,model=&quot;robit&quot;,df=df);
 # Recover regression parameters
-M = fit.BinReg(y=y,X=X,model=&quot;robit&quot;,df=df);
+M = Fit.BinReg(y=y,X=X,model=&quot;robit&quot;,df=df);
 show(M);</code></pre>
-<pre><code>## Objective increment:  100 
-## Objective increment:  14.9 
-## Objective increment:  0.802 
-## Objective increment:  0.0036 
-## Objective increment:  2.85e-07 
-## Objective increment:  1.39e-11 
-## 5 update(s) performed before tolerance limit.
+<pre><code>## Objective increment:  199 
+## Objective increment:  52.1 
+## Objective increment:  14.8 
+## Objective increment:  1.8 
+## Objective increment:  0.0339 
+## Objective increment:  6.67e-06 
+## Objective increment:  5.46e-10 
+## 6 update(s) performed before tolerance limit.
 ## 
-## Fitted Logistic Model
+## Fitted robit Model with 7 degrees of freedom
 ## Estimated Coefficients:
-##   Coeff   Point     SE      L       U        p
-## 1    x1  1.0900 0.0753  0.944  1.2400 1.22e-47
-## 2    x2 -0.5370 0.0612 -0.657 -0.4170 1.68e-18
-## 3    x3 -0.4340 0.0544 -0.540 -0.3270 1.52e-15
-## 4    x4 -0.0938 0.0551 -0.202  0.0141 8.85e-02</code></pre>
+##   Coeff   Point     SE       L      U        p
+## 1    x1  1.1900 0.1050  0.9860  1.400 6.32e-30
+## 2    x2 -1.2400 0.1100 -1.4500 -1.020 3.62e-29
+## 3    x3  2.3500 0.1720  2.0100  2.690 1.40e-42
+## 4    x4 -1.1900 0.1060 -1.4000 -0.986 2.72e-29
+## 5    x5  0.0816 0.0776 -0.0705  0.234 2.93e-01</code></pre>
+</div>
+<div id="inference-2" class="section level2">
+<h2>Inference</h2>
+<p>The same hypotheses considered previously are tested for the robit model.</p>
+<pre class="r"><code>cat(&quot;Test of b1=b2=b3=b4=0:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,T,T,T,T),model=&quot;robit&quot;,df=df,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b4=0:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,F,F,F,T),model=&quot;robit&quot;,df=df,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b2=0, b4=2:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,F,F,T,T),b10=c(0,2),model=&quot;robit&quot;,df=df,report=F);
+cat(&quot;\n&quot;);
+cat(&quot;Test of b1=b3=-1:\n&quot;);
+Score.BinReg(y=y,X=X,L=c(F,T,F,T,F),b10=c(-1,-1),model=&quot;robit&quot;,df=df,report=F);
+cat(&quot;\n&quot;);</code></pre>
+<pre><code>## Test of b1=b2=b3=b4=0:
+##         Score            df             p 
+##  5.390587e+02  4.000000e+00 2.382912e-115 
+## 
+## Test of b4=0:
+##     Score        df         p 
+## 1.1064617 1.0000000 0.2928524 
+## 
+## Test of b2=0, b4=2:
+##    Score       df        p 
+## 1723.926    2.000    0.000 
+## 
+## Test of b1=b3=-1:
+##      Score         df          p 
+## 5.52201878 2.00000000 0.06322791</code></pre>
 </div>
 </div>
 
