--- a/README.html
+++ b/README.html
@@ -187,7 +187,7 @@ show(M);</code></pre>
 </div>
 <div id="inference" class="section level2">
 <h2>Inference</h2>
-<p>Wald tests for individual coefficients are stored in <code>M@Coefficients</code> and displayed using the <code>show</code> method. The function <code>Score.BinReg</code> performs score tests on subsets of the regression coefficients. The test is specified using a logical vector <code>L</code> with as many elements as columns in the model matrix <code>X</code>. An element of <code>L</code> is set to <code>TRUE</code> if the regression coefficient for that column of <code>X</code> is fixed under <span class="math inline">\(H_{0}\)</span>. An element of <code>L</code> is set to <code>FALSE</code> if the regression coefficient for that column requires estimation under <span class="math inline">\(H_{0}\)</span>. At least one element of <code>L</code> must be <code>TRUE</code> (i.e. a test must be specified) and at least on element of <code>L</code> must be <code>FALSE</code> (i.e. a null model must be estimable).</p>
+<p>Wald tests for individual coefficients are stored in <code>M@Coefficients</code> and displayed using the <code>show</code> method. The function <code>Score.BinReg</code> performs score tests on subsets of the regression coefficients. The test is specified using a logical vector <code>L</code> with as many elements as columns in the model matrix <code>X</code>. An element of <code>L</code> is set to <code>TRUE</code> if the regression coefficient for that column of <code>X</code> is fixed under <span class="math inline">\(H_{0}\)</span>. An element of <code>L</code> is set to <code>FALSE</code> if the regression coefficient for that column requires estimation under <span class="math inline">\(H_{0}\)</span>. At least one element of <code>L</code> must be <code>TRUE</code> (i.e. a test must be specified) and at least one element of <code>L</code> must be <code>FALSE</code> (i.e. a null model must be estimable).</p>
 <p>Below, various hypothses are tested on the example data. The first is an overall test that the coefficients for all covariates, other than the intercept, are zero. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{1}=\beta_{2}=\beta_{3}=\beta_{4}=0\)</span>, which is false. The second is an individual test that the coefficient for the fourth covariate is zero. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{4}=0\)</span>, which is true. The third is a joint test that the coefficient for the second covariate is zero, and the coefficient for the fourth covariate is two. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{2}=0,\beta_{4}=2\)</span>, which if false. The fourth is a joint test that the coefficients for the first and third covariates are equal to negative one. The null hypothesis is <span class="math inline">\(H_{0}:\beta_{1}=\beta_{3}=-1\)</span>, which is true. All models include an intercept <span class="math inline">\(\beta_{0}\)</span>, since in each case <code>L[1]=FALSE</code>.</p>
 <pre class="r"><code>cat(&quot;Test of b1=b2=b3=b4=0:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,T,T,T,T),model=&quot;logistic&quot;,report=F);
@@ -196,7 +196,7 @@ cat(&quot;Test of b4=0:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,F,F,F,T),model=&quot;logistic&quot;,report=F);
 cat(&quot;\n&quot;);
 cat(&quot;Test of b2=0, b4=2:\n&quot;);
-Score.BinReg(y=y,X=X,L=c(F,F,F,T,T),b10=c(0,2),model=&quot;logistic&quot;,report=F);
+Score.BinReg(y=y,X=X,L=c(F,F,T,F,T),b10=c(0,2),model=&quot;logistic&quot;,report=F);
 cat(&quot;\n&quot;);
 cat(&quot;Test of b1=b3=-1:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,T,F,T,F),b10=c(-1,-1),model=&quot;logistic&quot;,report=F);
@@ -210,8 +210,8 @@ cat(&quot;\n&quot;);</code></pre>
 ## 0.6583181 1.0000000 0.4171544 
 ## 
 ## Test of b2=0, b4=2:
-##         Score            df             p 
-##  9.506807e+02  2.000000e+00 3.650072e-207 
+##    Score       df        p 
+## 1665.101    2.000    0.000 
 ## 
 ## Test of b1=b3=-1:
 ##     Score        df         p 
@@ -265,7 +265,7 @@ cat(&quot;Test of b4=0:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,F,F,F,T),model=&quot;probit&quot;,report=F);
 cat(&quot;\n&quot;);
 cat(&quot;Test of b2=0, b4=2:\n&quot;);
-Score.BinReg(y=y,X=X,L=c(F,F,F,T,T),b10=c(0,2),model=&quot;probit&quot;,report=F);
+Score.BinReg(y=y,X=X,L=c(F,F,T,F,T),b10=c(0,2),model=&quot;probit&quot;,report=F);
 cat(&quot;\n&quot;);
 cat(&quot;Test of b1=b3=-1:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,T,F,T,F),b10=c(-1,-1),model=&quot;probit&quot;,report=F);
@@ -280,7 +280,7 @@ cat(&quot;\n&quot;);</code></pre>
 ## 
 ## Test of b2=0, b4=2:
 ##    Score       df        p 
-## 7333.243    2.000    0.000 
+## 14293.39     2.00     0.00 
 ## 
 ## Test of b1=b3=-1:
 ##     Score        df         p 
@@ -299,7 +299,7 @@ y_{i} = I[z_{i}&gt;0]
 </div>
 <div id="estimation-2" class="section level2">
 <h2>Estimation</h2>
-<p>The function <code>Rit.BinReg</code> with <code>model=&quot;robit&quot;</code> specifies a robit model.</p>
+<p>The function <code>Fit.BinReg</code> with <code>model=&quot;robit&quot;</code> specifies a robit model. Note that the degrees of freedom requires specification. The robit model with <code>df=7</code> is similar to the logistic model.</p>
 <pre class="r"><code># Degrees of freedom
 df = 7;
 # Robit outcome
@@ -327,7 +327,7 @@ show(M);</code></pre>
 </div>
 <div id="inference-2" class="section level2">
 <h2>Inference</h2>
-<p>The same hypotheses considered previously are tested for the robit model.</p>
+<p>The same hypotheses considered previously are tested for the robit model. Note that the degrees of freedom requires specification.</p>
 <pre class="r"><code>cat(&quot;Test of b1=b2=b3=b4=0:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,T,T,T,T),model=&quot;robit&quot;,df=df,report=F);
 cat(&quot;\n&quot;);
@@ -335,7 +335,7 @@ cat(&quot;Test of b4=0:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,F,F,F,T),model=&quot;robit&quot;,df=df,report=F);
 cat(&quot;\n&quot;);
 cat(&quot;Test of b2=0, b4=2:\n&quot;);
-Score.BinReg(y=y,X=X,L=c(F,F,F,T,T),b10=c(0,2),model=&quot;robit&quot;,df=df,report=F);
+Score.BinReg(y=y,X=X,L=c(F,F,T,F,T),b10=c(0,2),model=&quot;robit&quot;,df=df,report=F);
 cat(&quot;\n&quot;);
 cat(&quot;Test of b1=b3=-1:\n&quot;);
 Score.BinReg(y=y,X=X,L=c(F,T,F,T,F),b10=c(-1,-1),model=&quot;robit&quot;,df=df,report=F);
@@ -350,7 +350,7 @@ cat(&quot;\n&quot;);</code></pre>
 ## 
 ## Test of b2=0, b4=2:
 ##    Score       df        p 
-## 1723.926    2.000    0.000 
+## 3598.797    2.000    0.000 
 ## 
 ## Test of b1=b3=-1:
 ##      Score         df          p 
